<resources>
    <!-- Weather icons -->
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <!-- Symbols -->
    <string name="celsius" translatable="false">&#8451;</string>
    <string name="fahrenheit" translatable="false">&#8457;</string>
    <string name="percent" translatable="false">&#37;</string>
    <!-- App strings -->
    <string name="app_name">Weather</string>
    <string name="open_weather_map_app_id" translatable="false">ebde5f527ee721df0d5898fc5049493b</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="temperature">Temperature: </string>
    <string name="feels_like">feels like: </string>
    <string name="photo_of_a_city">Photo of a city</string>
    <string name="degree" translatable="false">°</string>
    <string name="show_humidity">Show humidity</string>
    <string name="show_overcast">Show overcast</string>
    <string name="humidity">Humidity:</string>
    <string name="overcast">Overcast:</string>
    <string name="get_temp">Get Temp</string>
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="change_city_button">Change city button</string>
    <string name="choose_city">Choose city</string>
    <string name="update_weather">Update weather</string>
    <string name="settings">Settings</string>
    <string name="city_not_found">City not found</string>
    <string name="empty_list">Empty List</string>
    <string name="updating">Updating the weather…</string>
    <string name="moscow">Moscow</string>
    <string name="spb">Saint Petersburg</string>
    <string name="kazan">Kazan</string>
    <string name="ptz">Petrozavodsk</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="choose_city_only_english">Choose city (only english)</string>
    <string name="weather_last_week">Weather last week:</string>
    <string name="go_back">Go back</string>
    <string name="delete_city">Delete city</string>
    <string name="dark_theme">Dark theme</string>
    <string name="cancel">Cancel</string>
    <string name="city_added">City added</string>
    <string name="pressure">Pressure:</string>
    <string name="hPa">hPa</string>
    <string name="ms">m/s</string>
    <string name="last_update">Last update: </string>
    <string name="mmHg">mm Hg</string>
    <string name="wind">Wind: </string>
    <string name="add_new_city">Add new city</string>
    <string name="air_temperature">Аir temperature</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Weather</string>
    <string name="menu_gallery">About the developer</string>
    <string name="menu_slideshow">Feedback form</string>
    <string name="menu_tools">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>

