<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".activity.MainActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_arrow"
            style="@style/imageButton"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/choose_city"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/toWikiBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toWikiBtn"
            tools:text="Saint-Petersburg, RU" />

        <ImageButton
            android:id="@+id/toWikiBtn"
            style="@style/imageButton"
            android:contentDescription="@string/change_city_button"
            android:src="@drawable/ic_update_white_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/todayDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toWikiBtn"
            tools:text="31 дек. 1999 Ср. 23.49" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="?attr/primary_color"
            android:textSize="84sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/weatherIcon"
            app:layout_constraintTop_toBottomOf="@id/todayDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            tools:text="-5&#8451;" />

        <TextView
            android:id="@+id/weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="84sp"
            app:layout_constraintBottom_toBottomOf="@id/temperatureValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/temperatureValue"
            tools:text="A" />

        <TextView
            android:id="@+id/temperatureFeelsLikeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overcastValue"
            tools:text="feels like: -5&#8451;" />

        <TextView
            android:id="@+id/tempValueMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tempValueMin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tempValueMin"
            app:layout_constraintHorizontal_bias="0.5"
            tools:text="max: -3&#8451;" />

        <TextView
            android:id="@+id/tempValueMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tempValueMax"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temperatureFeelsLikeValue"
            tools:text="min: -6&#8451;" />

        <TextView
            android:id="@+id/humidityWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/humidity"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tempValueMin" />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="?attr/primary_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/humidityWord"
            app:layout_constraintStart_toEndOf="@id/humidityWord"
            tools:text="99&#37;" />

        <TextView
            android:id="@+id/overcastValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?attr/primary_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherIcon"
            tools:text="Частичная облачность" />

        <TextView
            android:id="@+id/pressureWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pressure"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/humidityWord"
            app:layout_constraintTop_toBottomOf="@id/humidityWord" />

        <TextView
            android:id="@+id/pressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/primary_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/humidityValue"
            app:layout_constraintTop_toTopOf="@id/pressureWord"
            tools:text="1014Pa" />

        <TextView
            android:id="@+id/windWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wind"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/humidityWord"
            app:layout_constraintTop_toBottomOf="@id/pressureValue" />

        <TextView
            android:id="@+id/windValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/primary_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/humidityValue"
            app:layout_constraintTop_toTopOf="@id/windWord"
            tools:text="2m/s" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>